@@ -15,6 +15,13 @@
     <description>Provides behavior necessary for loading artifacts</description>
 
     <properties>
+        <!-- Add visibility required by the tests exclusively -->
+        <surefire.args>
+            -XX:+IgnoreUnrecognizedVMOptions
+            --add-modules=net.bytebuddy.agent
+            ${surefire.args.base}
+        </surefire.args>
+
         <javaModuleName>org.mule.runtime.artifact.activation</javaModuleName>
         <skipExportTests>false</skipExportTests>
         <semver4jVersion>2.0.3</semver4jVersion>
@@ -61,10 +68,22 @@
             <groupId>org.mule.runtime</groupId>
             <artifactId>mule-artifact-ast-xml-parser</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.mule.runtime</groupId>
+            <artifactId>mule-core-mvel</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.mule.tests</groupId>
             <artifactId>mule-tests-unit</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mule.tests</groupId>
+            <artifactId>mule-test-runtime-extension-model</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
@@ -77,6 +96,11 @@
         <dependency>
             <groupId>org.mule</groupId>
             <artifactId>mule-maven-client-impl</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-inline</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
